index.css
/* elements for all sections */
* {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif; 
}

/* h1's */
h1 {
    font-size: 36px;
    font-weight: 600;
}

.row {
    /* to make items into a resizable row */
    margin-top: 5%;
    padding: 20px;
    display: flex;
    justify-content: space-between;
}

/* layer */
.layer {
    background: transparent; 
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    transition: 0.5s;
}

.layer h3 {
    width: fit-content;
    font-weight: 800;
    color: black;
    font-size: 26px;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    position: absolute; 
    border-radius: 10px;
    opacity: 0;
    transition: 0.5s;
}

.layer:hover h3 {
    padding: 3px 3px;
    background-color: rgba(158, 12, 12, 0.5);
    bottom: 49%;
    opacity: 1;
}

/* navigation menu */
.nav-menu {
    z-index: 1;
}

nav {
    width: 100%;
    background-color: black;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

nav .fa {
    display: none;  /* to hide icons on smaller screen */
}

.nav-links {
    padding-top: .75%;
    padding-bottom: .75%;
    padding-right: 3%;
    flex: 1;
    text-align: right;
}

.nav-links ul li {
    list-style: none;
    display: inline-block;  /* positions items side by side */
    padding: 8px 12px;  /* adds space around items */
    position: relative;
}

.nav-links ul li a {
    /* color of links in nav menu */
    color: #fff;
    text-decoration: none;
}

.nav-links ul li:after {
    content: '';
    width: 0%;
    height: 2px;
    background: #800000;
    display: block;
    margin: auto;
    transition: 0.5s;
}

.nav-links ul li:hover::after {
    width: 100%;
}

/* to hold nav in place while scrolling */
/* The sticky class is added to the header with JS when it reaches its scroll position */
.sticky {
    position: fixed;
    top: 0;
    width: 100%
}
  
/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
    .sticky + .content {
    padding-top: 102px;
}

/* header section */
.header {
    min-height: 100vh;  /* want the viewport height to extend the full screen */
    width: 100%;  /* using full width of page given */
    /* background-image: linear-gradient(rgba(92, 93, 97, 0.7), rgba(92, 93, 97, 0.7)), url(images/homePageBackground.jpg); */
    background-color: black;  /* temporary until image is acquired */
    background-position: center;  /* want image in center of page */
    background-size: cover;  /* extending image to cover full page */
    position: relative;  /* positioning image according to flow of document */
}

.intro {
    color: #fff;
    font-size: 50px;
    text-align: center;
    padding-top: 10%;

    /* block font */
    font-family: 'Roboto', sans-serif;
}

.name {
    color: #fff;
    font-size: 120px;
    text-align: center;

    /* cursive font */
    font-family: 'Allison', cursive;
}

/* experience section */
.experience {
    width: 80%;  /* only want to take up 80% of screen */
    margin: auto;  /* margin fits to page */
    text-align: center;  /* move text to center */
    padding-top: 130px; /* spacing between experience content and header */

    /* background color */
    /* background-color: #D2D2CF; */
}

.experience .row {
    /* content specific to items in experience section */
    flex-wrap: wrap;
}

.experience-col {
    min-width: 50px;
    max-width: 500px;
    flex-basis: 31%;
    background: #fff3f3;
    border-radius: 10px;
    margin: 5px;
    padding: 20px 12px;
    box-sizing: border-box;
    transition: 0.5s;
}

.experience-col:hover {
    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
}

/* projects section */
.projects {
    width: 80%;  /* only want to take up 80% of screen */
    margin: auto;  /* margin fits to page */
    text-align: center;  /* move text to center */
    padding-top: 130px; /* spacing between experience content and header */

    /* background color */
    /* background-color: #D2D2CF; */
}

.projects-col {
    flex-basis: 32%;
    border-radius: 10px;
    margin-bottom: 30px;
    /* this margin positions items in the projects-col div tag centered */
    margin-left: auto;
    margin-right: auto;
    position: relative;
    overflow: hidden;
}

.projects-col a {
    color: black;
    text-decoration: none;
}

.projects-col img {
    width: 100%;
    /* this margin positions each img in the projects-col div tag in the center of its space */
    margin-left: auto;
    margin-right: auto;
    display: block;
    border-radius: 7%;
}

/* hackathons section */
.hackathons {
    width: 80%;
    margin: auto;
    padding-top: 130px;
    text-align: center;

    /* background color */
    /* background-color: #D2D2CF; */
}

.hackathons-col {
    flex-basis: 32%;
    margin-bottom: 30px;
    /* to position in center of screen */
    margin-left: auto;
    margin-right: auto;
    position: relative;
    overflow: hidden;
}

.hackathons-col a {
    color: black;
    text-decoration: none;
}

/* footer section */
.footer {
    width: 100%;
    text-align: center;
    padding: 30px 0;
    background-color: black;
}

.footer h4 {
    color: #fff;
}

.icons .fa {
    color: #fff;
    margin: 0 13px;
    cursor: pointer;
    padding: 18px 0;
}

.icons .fa:hover {
    color: #800000;
}

/* what to do for smaller screens */
@media(max-width: 900px) {
    /* to display icons on smaller screen */
    nav .fa {
        position: absolute;
        display: block;
        color: #fff;
        margin: 10px;
        right: 5px;
        top: 8px;
        font-size: 22px;
        cursor: pointer;
    }

    /* adding background for nav links */
    .nav-links {
        position: absolute;
        background: #800000;
        height: 100vh;  /* want background for links to be same height as rest of section */
        width: 200px;
        top: 0;
        right: -200px;  /* initial placement is hidden from view */
        text-align: left;
        z-index: 2;
        transition: 1s;
    }

    /* bars icon */
    .nav-links .fa {
        position: absolute;
        display: block;
        color: #fff;
        margin: 10px;
        left: 5px;
        top: 8px;
        font-size: 22px;
        cursor: pointer;
    }

    /* list item on smaller screen */
    .nav-links ul {
        padding: 30px;
    }

    /* changing nav links to blocked list from inline */
    .nav-links ul li {
        display: block;
    }

    /* need text to be smaller */
    .intro {
        color: #fff;
        font-size: 20px;
        text-align: center;
        padding-top: 10%;
    }
    
    .name {
        color: #fff;
        font-size: 55px;
        text-align: center;
    }

    /* row items */
    .row {
        flex-direction: column;
    }
}

